--- a/src/blocks/stack/style.scss
+++ b/src/blocks/stack/style.scss
@@ -63,7 +63,9 @@
 		> .wp-block-video,
 		> .wp-block-embed,
 		> .wp-block-table,
-		> .wp-block-list {
+		> .wp-block-list,
+		> .dsg-grid,
+		> .wp-block-designsetgo-grid {
 			width: 100%;
 		}
 
